# apppack-stats

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/apppack_stats/: __init__.py  extractors.py
tests/: __init__.py  test_app_smoke.py  test_cli.py  test_core.py
