[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apppack-stats"
version = "0.3.0"
description = "Live response-time stats from streamed AppPack web logs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Martin Mahner", email = "martin@elephant.house" }]
keywords = ["apppack", "logs", "stats", "monitoring", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
]
dependencies = [
    "textual>=0.50",
]

[project.scripts]
apppack-stats = "apppack_stats:main"

[project.urls]
Homepage = "https://github.com/bartTC/apppack-stats"
Issues = "https://github.com/bartTC/apppack-stats/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/apppack_stats"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
