[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apppack-stats"
version = "0.6.0"
description = "Live response-time stats from streamed AppPack web logs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Martin Mahner", email = "martin@elephant.house" }]
keywords = ["apppack", "logs", "stats", "monitoring", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
]
dependencies = [
    "textual>=0.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
apppack-stats = "apppack_stats:main"

[project.urls]
Homepage = "https://github.com/bartTC/apppack-stats"
Issues = "https://github.com/bartTC/apppack-stats/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/apppack_stats"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
lint.select = ["ALL"]
lint.ignore = [
    # Valid exclusions.
    "COM812", # Conflicts with ruff format
    "E501", # Line too long (>88)
    "D203", # incorrect-blank-line-before-class (conflicts with D211)
    "D212", # Don't require summary on first line
    "ERA001", # Found commented-out code
    "FBT", # Flake Boolean Trap (don't use arg=True in functions)
]

[tool.ruff.lint.extend-per-file-ignores]
"test_*.py" = [
    "S101", # Use of `assert` detected
    "PLR2004", # Magic value in comparison — tests compare to literal counts/percentages
    "D", # Tests don't need docstrings on every class/method
    "ANN", # Fake objects and inline helpers don't need full type annotations
    "SLF001", # Tests routinely reach into implementation internals
    "ARG001", # pytester/tmp_path fixtures accepted for their side effects
    "ARG002", # Same for unused parameters on fake callables
    "N806", # MagicMock instances are conventionally named like classes
]
